--- a/USBHerzchirurgie/Info.plist
+++ b/USBHerzchirurgie/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>toivoa.ch.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>toivoa.ch.USBHerzchirurgie</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
